# Vera_software

./: .gitignore  README.md  RISOLUZIONE_DESKTOP.md  package-lock.json  package.json
backend/: .env.example  package.json  tsconfig.json
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_MULTI_DEVICE.md  AUTH_IMPLEMENTATION_GUIDE.md  AUTOMATIC_FALLBACK_SYSTEM.md  BACKEND_INTEGRATION.md  CHANGELOG.md  CHANGELOG_UI_UPDATES.md  CONTRIBUTING.md  Configuration.md  DEPLOYMENT.md  Database.md  Development.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  INSTALLER-INFO.md  MONOREPO_COMPLETION.md  PREVIEW_VS_PRODUCTION.md  PROJECT_STRUCTURE.md  QUICK_AUTH_SETUP.md  QUICK_START_OPTIMIZED.md  README-EXECUTION.md  README-INSTALLAZIONE-FINALE.md  README.md  SETUP.md  SYSTEM_MONITORING_INTEGRATION.md  TAURI_IMPLEMENTATION.md  TEST_STATUS_REPORT.md  TROUBLESHOOTING.md  USAGE_SYSTEM_MONITOR.md  User-Guide.md
frontend/: index.html  package.json  tsconfig.json
installer-build/: README.txt  installer.vbs  package.json
scripts/: VERA-Installer-Final.ps1  VERA-Setup-Final.bat  build-advanced-installer.ps1  build-clean.ps1  build-installer.ps1  build.ps1  build.sh  create-all-icons.ps1  create-icons.ps1  (+18 more)
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/energy/: calculator.rs
src-tauri/notifications/: scheduler.rs
src-tauri/src/: main.rs
src-tauri/src/energy/: mod.rs  monitor.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/permissions/: mod.rs
src-tauri/src/storage/: db.rs
src-tauri/src/utils/: mod.rs
src-tauri/storage/: mod.rs
src-tauri/system_monitor/: mod.rs
(+191 files in other folders)
