[package]
name = "vera"
version = "1.0.0"
description = "VERA - Value of Environmental Responsibility & Awareness"
authors = ["VERA Project"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.8.5", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
chrono = "0.4"
rusqlite = { version = "0.30", features = ["bundled"] }
sysinfo = "0.30"
once_cell = "1.19"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
# winapi = { version = "0.3", features = ["winuser", "windef"] }  # Uncomment for fullscreen detection

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
